--- a/AutoClick/AutoClick.csproj
+++ b/AutoClick/AutoClick.csproj
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.25.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
   </ItemGroup>
 
 </Project>
