--- a/AutoClick/appsettings.json
+++ b/AutoClick/appsettings.json
@@ -9,6 +9,14 @@
   },
   "UseAzureStorage": true,
   "LocalStoragePath": "LocalStorage",
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUser": "tu-email@gmail.com",
+    "SmtpPassword": "tu-contraseña-de-aplicacion",
+    "FromEmail": "noreply@autoclick.cr",
+    "FromName": "AutoClick.cr"
+  },
   "OnvoPay": {
     "BaseUrl": "https://api.onvopay.com",
     "SecretKey": "",
