Fix de bug al enviar mails, establecimiento de nuevo correo

--- a/AutoClick/appsettings.json
+++ b/AutoClick/appsettings.json
@@ -11,10 +11,10 @@
   "LocalStoragePath": "LocalStorage",
   "EmailSettings": {
     "SmtpHost": "smtp.gmail.com",
-    "SmtpPort": "587",
-    "SmtpUser": "tu-email@gmail.com",
-    "SmtpPassword": "tu-contraseña-de-aplicacion",
-    "FromEmail": "noreply@autoclick.cr",
+    "SmtpPort": "465",
+    "SmtpUser": "soporte.autoclick@gmail.com",
+    "SmtpPassword": "pasfvfyfaiuxvfsy",
+    "FromEmail": "soporte.autoclick@gmail.com",
     "FromName": "AutoClick.cr"
   },
   "OnvoPay": {
