Olvido de contrasena en auth

--- a/AutoClick/appsettings.Development.json
+++ b/AutoClick/appsettings.Development.json
@@ -5,10 +5,10 @@
   },
   "EmailSettings": {
     "SmtpHost": "smtp.gmail.com",
-    "SmtpPort": "587",
-    "SmtpUser": "pablosalazar1122@gmail.com",
-    "SmtpPassword": "tybu mlsg fobb xaij",
-    "FromEmail": "noreply@autoclick.cr",
+    "SmtpPort": "465",
+    "SmtpUser": "soporte.autoclick@gmail.com",
+    "SmtpPassword": "pasfvfyfaiuxvfsy",
+    "FromEmail": "soporte.autoclick@gmail.com",
     "FromName": "AutoClick.cr"
   },
   "UseAzureStorage": true,
